# pioneer3dx

./: README.md
control/: CMakeLists.txt  package.xml
control/config/: pioneer3dx.yaml
control/launch/: control.launch
description/: CMakeLists.txt  package.xml
description/urdf/: openni_kinect.xacro  pioneer3dx.gazebo  pioneer3dx.urdf  pioneer3dx.xacro  pioneer3dx_wheel.xacro
gazebo/: CMakeLists.txt  package.xml
gazebo/launch/: pioneer3dx_empty_world.launch
launchfiles/: CMakeLists.txt  package.xml
launchfiles/launch/: pioneer3dx.rviz  rviz.launch
