<?xml version="1.0"?>
<package>
  <name>pioneer3dx_control</name>
  <version>0.1.0</version>
  
  <license>TODO</license>
  
  <description>
    Controllers for Adept MobileRobots/ActivMedia Pioneer 3DX robot
  </description>
  
  <maintainer email="dasha.lingam@gmail.com">Dasharadhan Mahalingam</maintainer>
  <author email="dasha.lingam@gmail.com">Dasharadhan Mahalingam</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>controller_manager</build_depend>
  <run_depend>controller_manager</run_depend>
</package>